--- a/style.css
+++ b/style.css
@@ -1,6 +1,178 @@
-h1{
-    text-align: center;
-    font-size: 100px;
+html{
+    scroll-behavior: smooth;
+}
+*{
+    padding: 0px;
     margin: 0px;
+    box-sizing: border-box;
+}
+
+p{
+    font-weight: bold;
+    font-size: 25px;
+}
+body{
+    background-color: #A9DBC7   ;
+}
+section{
+    display: flex;
+    flex-wrap: wrap;
+}
+.info{
+    font-size: 20px;
+    margin-left: 20px   ;
+    width: 450px;
+    font-weight: 300;
+}
+.project img{
+    width: 25%;
+    height: 300px;
+    border-radius: 10px 
+}
+.intro{
+    height: 50rem;
+}
+.intro--para{
+    font-weight: bold;
+    font-size: 80px;
+    margin: 150px 100px 00px 100px;
+}
+.intro--desc{
+    margin: 10px 0px 0px 100px;
+    width: 850px;
+    font-size: 40px;
+}
+button{
+    padding: 25px 50px;
+    border: 2px solid #406E8E;
+    border-radius: 30px;
+    margin-bottom: 10px;
+    background: #406E8E;
+    color: white;
+    margin: 75px 0px 0px 90px;
+    font-size: 25px;
+}
+.navbar{
+    position: fixed;
+    display: flex;
+    background: #23395B;
+    padding: 20px 20px 20px 20px;
+    top: 0;
+    left: 0;
+    right: 0;
+    align-items: center;
+    justify-content: space-evenly;
+    opacity: 96%;
+}
+div > a{
+    text-decoration: none;
+    color: white;
+}
+.project{
+    margin-left: 2rem;
+    padding: 5rem 0 0 0;
+}
+.project section{
+    margin: 2rem 0 3rem 0;
     
 }
+.navbar a{
+    transition: 0.5s;
+    font-size: 1.2rem;
+     padding: 0.2rem;
+}
+.navbar a:hover{
+    color: #B4C5E4;
+    transform: scale(1.15);
+    /* background-color: rgb(90, 162, 68); */
+   
+    /* border-radius: 0.5rem; */
+}
+.navbar a::after{
+    content: "";
+    display: block;
+    padding-bottom: 0.5rem;
+    border-bottom: 0.1rem solid #FFDAD6;
+    transform: scaleX(0);
+    transition: 0.2s linear;
+}
+.navbar a:hover::after{
+    transform: scaleX(0.7);
+
+}
+.intro a button{
+    transition: 0.5s;
+}
+.intro a button:hover{
+    color: rgb(255, 76, 76);
+    transform: scale(1.1);
+    /* transition: 0.2s; */
+}
+.about-me{
+    height: 50rem;
+    padding: 5rem 0 0 0;
+    /* display: flex; */
+    /* background-color:blue; */
+}
+.about--para{
+    margin: 0px 0px 0px 100px;
+    font-size: 4rem;
+}
+.about--desc{
+    margin: 10px 0px 0px 100px;
+    width: 45rem;
+    float: left;
+}
+.row{
+    display: flex;
+    /* height:22.50rem; */
+
+}
+.row img{
+    height: 40rem;
+    width: 40rem;
+}
+
+.contact{
+    height: 45rem;
+    padding: 8rem 0 0 0;
+    /* margin: 0 0 0 8rem; */
+    /* display: flex; */
+    
+}
+.contact img{
+    height: 20rem;
+    border-radius: 100%;
+    width: 20rem;
+    margin: 0 0 0 16rem;
+}
+.contact--info{
+    display: flex;
+    margin-top: 4rem;
+}
+.contact h2{
+    /* margin: 0 0 0 20rem; */
+    text-align: center;
+    font-size: 4rem;
+    
+    
+}
+.contact ul{
+    /* float: right; */
+    float: left;
+    margin: 1rem 0 0 3rem;
+    list-style-type: disc;
+    font-size: 23px;
+}
+footer{
+    height: 13rem;
+    background-color: #23395B;
+    padding: 2rem 2rem 2rem 2rem;
+}
+.social{
+    text-align: center;
+}
+.social i{
+    margin-left: 3rem;
+}
+
