--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 html{
     scroll-behavior: smooth;
 }
+
 *{
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 p{
@@ -21,12 +23,13 @@ section{
 .info{
     font-size: 20px;
     margin-left: 20px   ;
-    width: 450px;
+    width: 35rem;
     font-weight: 300;
+    margin-top: 0;
 }
 .project img{
-    width: 25%;
-    height: 300px;
+    width: 20rem;
+    height: 20rem;
     border-radius: 10px 
 }
 .intro{
@@ -61,9 +64,11 @@ button{
     left: 0;
     right: 0;
     align-items: center;
-    justify-content: space-evenly;
+    
     opacity: 96%;
+    z-index:9999;
 }
+
 div > a{
     text-decoration: none;
     color: white;
@@ -79,7 +84,20 @@ div > a{
 .navbar a{
     transition: 0.5s;
     font-size: 1.2rem;
-     padding: 0.2rem;
+    padding: 0.2rem;
+     /* margin-left: 4rem; */
+}
+.navbar--nav{
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+}
+.hamburger{
+    margin: 0;
+    padding: 0;
+}
+.hamburger .hamburger--nav{
+    display: none;
 }
 .navbar a:hover{
     color: #B4C5E4;
@@ -122,15 +140,18 @@ div > a{
     margin: 10px 0px 0px 100px;
     width: 45rem;
     float: left;
+    font-size: 2rem;
 }
-.row{
+.column{
     display: flex;
     /* height:22.50rem; */
 
 }
 .row img{
-    height: 40rem;
-    width: 40rem;
+    height: 30rem;
+    width: 30rem;
+    border-radius: 100%;
+    margin: 0 0 0 5rem;
 }
 
 .contact{
@@ -144,7 +165,7 @@ div > a{
     height: 20rem;
     border-radius: 100%;
     width: 20rem;
-    margin: 0 0 0 16rem;
+    margin: 0 0 0 18rem;
 }
 .contact--info{
     display: flex;
@@ -162,17 +183,156 @@ div > a{
     float: left;
     margin: 1rem 0 0 3rem;
     list-style-type: disc;
-    font-size: 23px;
+    font-size: 20px;
 }
 footer{
-    height: 13rem;
+    height: 14rem;
     background-color: #23395B;
-    padding: 2rem 2rem 2rem 2rem;
+    padding: 2rem 2rem 2rem 0rem;
+    width: 100%;
 }
 .social{
     text-align: center;
 }
-.social i{
+.social a i{
     margin-left: 3rem;
 }
+.fa-brands, .fa-regular{
+    color: #FFFFFF;
+    transition: 0.5s;
+}
+.social .fa-brands:hover, .fa-regular:hover{
+    color:#B4C5E4;
+    transform: scale(1.2);
+}
+.directory{
+    justify-content: center;
+    display: flex;
+    color: #FFFFFF;
+}
+.directory a, h2{
+    margin: 3rem 3rem 3rem 3rem;
+    /* text-align: center; */
+}
+.directory a:hover{
+    color: #B4C5E4;
+}
+.directory a::after{
+    content: "";
+    display: block;
+    padding-bottom: 0.5rem;
+    border-bottom: 0.1rem solid #FFDAD6;
+    transform: scaleX(0);
+    transition: 0.2s linear;
+}
+.directory a:hover::after{
+    transform: scaleX(0.7);
+}
+.Love h3{
+    text-align: center;
+    color: #FFFFFF;
+    font-weight: 100;
+    font-size: 1rem;
+    padding-bottom: 0px;
+}
+@media (max-width: 758px){
+    html{
+        font-size: 65%;
+        width: 100%;
+    }
+    nav{
+        width: 100%;
+    }
 
+    .navbar .navbar--nav{
+        position: absolute;
+        top: 100%;
+        left: -100%;
+        width: 30rem;
+        height: 100vh;
+        transition: 0.3s;
+        background-color: #406E8E;
+        display: inline-block;
+    }
+    .navbar .navbar--nav.active{
+        left: 0;
+    }
+    .navbar .navbar--nav a{
+        color: #FFFFFF;
+        display: block;
+        margin: 1.5rem;
+        padding: 0.5rem;
+        font-size: 2rem;
+    }
+    .hamburger .hamburger--nav{
+        display: inline-block;
+        /* margin-left: 30rem; */
+    }
+    .intro--para{
+        font-size: 2rem;
+        width: 25rem;
+        margin: 30rem 0 0 4rem;
+    }
+    .intro--desc{
+        font-size: 1.5rem;
+        margin-left: 4rem;
+        width: 35rem;
+    }
+    .intro a button{
+        padding: 1rem 1rem 1rem 1rem;
+        font-size: 1.5rem;
+        margin-top: 3rem;
+        margin-left: 4rem;
+    }
+
+    .about-me{
+        margin-top: 10rem;
+        padding-top: 25rem;
+    }
+    .about--para{
+        font-size: 2rem;
+        margin-left: 4rem;
+    }
+    .about--desc{
+        font-size: 1.5rem;
+        width: 30rem;
+        margin-left: 4rem;
+
+    }
+
+    .row img{
+        
+        height: 13rem;
+        width: 13rem;
+        margin-left: 4rem;
+        overflow-x:scroll;
+
+    }
+    .project{
+        margin-top: 35rem;
+        padding-top: 8rem;
+    }
+    .info{
+        margin: 0;
+        font-size: 1.5rem;
+        font-weight: 500;
+    }
+    footer{
+        width: 100%;
+    }
+    .contact{
+        font-size: 2rem;
+    }
+    .contact--info img{
+        margin-left: 2rem;
+        height: 13rem;
+        width: 13rem;
+    }
+    .social a{
+        margin-left: 1rem;
+    }
+    .directory a,h2{
+        margin-left: 0.5rem;
+        margin-right: 0.5rem;
+    }
+}
