--- a/style.css
+++ b/style.css
@@ -271,18 +271,18 @@ footer{
     .intro--para{
         font-size: 2rem;
         width: 25rem;
-        margin: 30rem 0 0 4rem;
+        margin: 30rem 0 0 2rem;
     }
     .intro--desc{
         font-size: 1.5rem;
-        margin-left: 4rem;
+        margin-left: 2rem;
         width: 31rem;
     }
     .intro a button{
         padding: 1rem 1rem 1rem 1rem;
         font-size: 1.5rem;
         margin-top: 3rem;
-        margin-left: 4rem;
+        margin-left: 2rem;
     }
 
     .about-me{
@@ -291,12 +291,12 @@ footer{
     }
     .about--para{
         font-size: 2rem;
-        margin-left: 4rem;
+        margin-left: 2rem;
     }
     .about--desc{
         font-size: 1.5rem;
-        width: 30rem;
-        margin-left: 4rem;
+        width: 27rem;
+        margin-left: 2rem;
 
     }
 
@@ -304,7 +304,9 @@ footer{
         
         height: 13rem;
         width: 13rem;
-        margin-left: 4rem;
+        margin-left: 10rem;
+        margin-top: 2rem;
+        
         overflow-x:scroll;
 
     }
